--- a/public/afterlogin/form_add_category.html
+++ b/public/afterlogin/form_add_category.html
@@ -336,8 +336,8 @@ MODAL
           namecategory: categoryname1
 
         })
-        // alert("Thành công")
-        document.getElementById('categoryname').innerText = '';
+        alert("Thành công")
+        document.getElementById('categoryname').value = '';
 
       }
 
