--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
 
     <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <link rel="icon" href="./images/icon_web.png">
 
     <link rel="stylesheet" type="text/css" href="css/util.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
